# mariocoin

./: .gitignore  README.md  metadata.json
.metadata/: metadata.json
lib/: Cargo.toml
lib/src/: crypto.rs  error.rs  lib.rs  main.rs  sha256.rs  types.rs  utils.rs
