[package]
name = "lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
ciborium = "0.2.2"
serde = "1.0.217"
sha256 = "1.5.0"
uint = "0.10.0"
uuid = { version = "1.13.1", features = ["v4", "serde"] }
